-Fix tests by excluding ServletTestExecutionListener, DirtiesContextTestExecutionListener, TransactionalTestExecutionListener, SqlScriptsTestExecutionListener from TestExecutionListeners\ -Add jacoco and cobertura test coverage, nicer test console output, html reports